Closed Bug 83946 Opened 24 years ago Closed 24 years ago

Crash/freeze when backspacing over signature lines

Categories

(MailNews Core :: Composition, defect, P1)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: momoi, Assigned: kinmoz)

References

Details

(Keywords: crash, hang, Whiteboard: fix in hand, reviewed, a=asa)

Attachments

(2 files)

** Observed with 6/2/2001 Win32 trunk build and with 6/1/2001 Win32 branch build ** 1. Have asignature file ready to automatically attach to your outgoing mail via Edit | Mail/News Account Settings.. 2. Now bring up a new mail composer window. 3. At this point, you will have something like the following showing in your editor window: Line 1: -- Line 2: Your_name Line 3: Organization name etc. 4. Insert the cursor to the end of Line 2. 5. Now hold the Backspace key and delete the characters on Line 2. 6. The cursor somehow stops at the beginning of Line 2 and does not move over to the end of Line 1. Moreover, the application seems to be hung at this point and would not respond to any mouse actions. 7. Eventually you're prompted to terminate the program.
This might be related to Bug 83448. (Let's hope so because there is a patch for it.) I am CC'ing some people in Bug 83448.
Keywords: crash
I guess it's more like freeze.
Summary: Crash when backspacing over signature lines → Crash/freeze when backspacing over signature lines
Keywords: hang
I'm having a bit of trouble reproducing this crash. Perhaps attatching your sig file might help? Kat, what type of mail composer are you using? Plaintext? HTML? Do you see the problem in OPT and Debug builds? I tried both Plaintext and HTML compose in a debug and neither of them crash/hang. I used the following sig as my test case: Joaquin Blas Netscape Communications Corporation mailto:kin@netscape.com Note that the "--" before the sig is added by MailCompose.
kin, call me on the phone I can step you through the procedure to reproduce this bug.
Assignee: ducarroz → jfrancis
Priority: -- → P1
I just attatched 2 files to this bug. The first attatchment (06/05/01 17:44 HTML Signature Test Case) is the signature file to use to recreate the file. To reproduce: 1. Have HTML Mail compose load this file as your signature. 2. Place your caret after the 'b' character 3. Hit backspace 3 times. You should then see a hang. I noticed we are actually inserting nodes that are in the <head> portion of the sig file, into the message body ... ugh ... this is contributing to the hang, which is due to an infinite loop in nsWSRunObject::PriorVisibleNode() while aNode is a <title> node! The 2nd attatchment is a proposed patch that fixes 2 places in the same file where an infinite loop could happen. jfrancis@netscape.com needs to look this over to make sure it doesn't cause any whitespace regression. We still need to prevent the <head> children from being inserted into the message <body>. Is the signature file allowed to be a full HTML file? Or is it supposed to be just an HTML fragment?
if the user does create a full html file, the html, any head elements and the body element would need to be stripped, just the signature text and structural or inline elememts should be dropped in. Anything more than that would result in a very illegal file
change ->esther (attachment area)
QA Contact: sheelar → esther
how frequently would a user do this? Is this something that folks do often?
Yes, I happen to do it a lot because we don't have an option for multiple signatures. I edit the lines by deleting some lines. In some cases, my default is to attach a signature but then realizes that a formal signature is not appropriate and so I end up deleting the lines.
Kat, I think beppe was asking if people often use full blown HTML files as their signatures, instead of HTML fragments.
> Kat, I think beppe was asking if people often use full blown HTML files > as their signatures, instead of HTML fragments. How does one make an HTML fragment if one uses an HTML editor like a Mozilla composer? That is what I used to prepare the signature I use. If we want users to create an HTML fragment that fit in well with the mail text, then we should probably provide a signature menu as some mailers (e.g. Eudora) do.
r = jfrancis
Assignee: jfrancis → kin
9.2
Whiteboard: fix in hand, need sr=
Target Milestone: --- → mozilla0.9.2
sr=sfraser
Whiteboard: fix in hand, need sr= → fix in hand, need a=
Blocks: 83989
Whiteboard: fix in hand, need a= → fix in hand, reviewed, need a=
a= asa@mozilla.org for checkin to the trunk. (on behalf of drivers)
Whiteboard: fix in hand, reviewed, need a= → fix in hand, reviewed, a=asa
06/05/01 17:47 Patch checked into the Trunk: mozilla/editor/base/nsWSRunObject.cpp revision 1.5 I'll file a seperate bug about the head elements being inserted under the body. FYI, I think it was assumed that only HTML fragments would be passed into the editor's InsertHTML() method.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Using build 2001-06-28 on win, mac and linux and the attached html signature test case, I do not crash when backspacing over the signature. Verified.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: