Fix for bug #83946 (Crash/freeze when backspacing over signature lines)

Fixed infinite loop in PriorVisibleNode() and NextVisibleNode() which would
happen when aNode was a node that could have children, but didn't have any,
and it's prior/next siblings weren't  eNormalWS.

r=jfrancis@netscape.com  sr=sfraser@netscape.com  a=asa@mozilla.org